--- a/index.html
+++ b/index.html
@@ -6,23 +6,25 @@
     <title>Portwind Website</title>
     <link rel="stylesheet" href="./dist/output.css" />
   </head>
-  <body class="font-nunito">
+  <body id="body" class="font-nunito">
     <!-- Introduction Section -->
     <section
-      class="h-[60vh] lg:h-screen bg-gradient-to-t from-indigo-200 relative overflow-hidden"
+      class="h-[60vh] lg:h-screen bg-gradient-to-t from-indigo-200 dark:from-slate-800 dark:to-slate-900 relative overflow-hidden"
       id="home"
     >
       <!-- Navigation Bar -->
-      <nav class="w-full fixed top-0 bg-white z-10">
+      <nav class="w-full fixed top-0 bg-white dark:bg-slate-900 z-10">
         <section
           class="container mx-auto py-5 flex items-center justify-between"
         >
           <section class="flex items-center gap-2">
             <img class="w-8" src="./dist/images/logo.png" alt="logo" />
-            <span class="text-2xl font-bold text-indigo-900">Portwind.</span>
+            <span class="text-2xl font-bold text-indigo-900 dark:text-white"
+              >Portwind.</span
+            >
           </section>
           <ul
-            class="hidden md:flex space-x-10 text-gray-600 uppercase font-bold text-sm"
+            class="hidden md:flex space-x-10 text-gray-600 dark:text-gray-100 uppercase font-bold text-sm"
           >
             <li class="hover:text-gray-400"><a href="#home">Homepage</a></li>
             <li class="hover:text-gray-400"><a href="#about">About</a></li>
@@ -53,6 +55,7 @@
             class="hidden md:block w-5 cursor-pointer"
             src="./dist/images/moon.png"
             alt="mode change"
+            id="mode"
           />
           <span id="open" class="md:hidden cursor-pointer font text-2xl mr-2"
             >&#9776;</span
@@ -75,15 +78,17 @@
       <section
         class="absolute font-bold top-1/3 left-5 sm:left-10 md:left-1/4 lg:left-5 xl:left-48 text-xl sm:text-4xl md:text-6xl 2xl:text-9xl"
       >
-        <span class="text-gray-600">Freelance</span>
+        <span class="text-gray-600 dark:text-gray-300">Freelance</span>
         <p id="text" class="text-red-500"></p>
       </section>
       <!-- text content -->
       <section
-        class="hidden lg:flex gap-5 rounded-md flex-col absolute top-0 bottom-0 m-auto right-5 shadow-lg bg-white p-6 h-fit w-1/3"
+        class="hidden lg:flex gap-5 rounded-md flex-col absolute top-0 bottom-0 m-auto right-5 shadow-lg dark:bg-slate-900 bg-white dark:shadow-slate-800 p-6 h-fit w-1/3"
       >
-        <h1 class="font-bold text-4xl text-indigo-900">Hi, I'm John</h1>
-        <p class="text-gray-400">
+        <h1 class="font-bold text-4xl text-indigo-900 dark:text-indigo-400">
+          Hi, I'm John
+        </h1>
+        <p class="text-gray-400 dark:text-gray-300">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt saepe
           culpa doloribus, minus eum aspernatur iste dolor. Nobis esse, eum
           earum reprehenderit vitae nihil, quaerat, minima eaque accusantium
@@ -98,7 +103,7 @@
     </section>
 
     <!--about section-->
-    <section class="px-10" id="about">
+    <section class="px-10 dark:bg-slate-900" id="about">
       <section
         class="container py-10 md:py-16 mx-auto flex gap-20 flex-col-reverse md:flex-row items-center"
       >
@@ -116,22 +121,26 @@
         <!--right side-->
         <section class="my-auto flex flex-col gap-3">
           <h1 class="text-indigo-600 font-bold uppercase">About Me</h1>
-          <h1 class="text-3xl font-medium">Better Design</h1>
-          <h1 class="text-3xl font-medium">Better Experience</h1>
-          <p class="text-gray-400">
+          <h1 class="text-3xl font-medium dark:text-white">Better Design</h1>
+          <h1 class="text-3xl font-medium dark:text-white">
+            Better Experience
+          </h1>
+          <p class="text-gray-400 dark:text-gray-300">
             I design and build digital products. I'm also a multi-displinary
             maker with over 10 years of experiences in a wide range of design
             disciplines.
           </p>
-          <h2 class="text-gray-400 font-medium">HTML</h2>
+          <h2 class="text-gray-400 font-medium dark:text-gray-300">HTML</h2>
           <section class="w-full bg-gray-200 h-1.5 rounded-md">
             <section class="w-full bg-indigo-600 h-1.5 rounded-md"></section>
           </section>
-          <h2 class="text-gray-400 font-medium">Javascript</h2>
+          <h2 class="text-gray-400 font-medium dark:text-gray-300">
+            Javascript
+          </h2>
           <section class="w-full bg-gray-200 h-1.5 rounded-md">
             <section class="w-4/6 bg-indigo-600 h-1.5 rounded-md"></section>
           </section>
-          <h2 class="text-gray-400 font-medium">React</h2>
+          <h2 class="text-gray-400 font-medium dark:text-gray-300">React</h2>
           <section class="w-full bg-gray-200 h-1.5 rounded-md">
             <section class="w-5/6 bg-indigo-600 h-1.5 rounded-md"></section>
           </section>
@@ -140,13 +149,13 @@
     </section>
 
     <!--services-->
-    <section id="services">
+    <section id="services" class="dark:bg-slate-900">
       <section class="container mx-auto">
         <!-- top -->
         <section class="flex flex-col gap-3 items-center">
           <h1 class="text-indigo-600 font-bold uppercase">services</h1>
-          <h1 class="text-3xl">What do i offer?</h1>
-          <p class="text-center w-1/2 text-gray-400">
+          <h1 class="text-3xl dark:text-white">What do i offer?</h1>
+          <p class="text-center w-1/2 text-gray-400 dark:text-gray-300">
             My approach to website design is to create a website that
             strengthens your company's brand while ensuring ease of use and
             simplicity for your audience
@@ -155,11 +164,11 @@
         <section class="flex flex-wrap">
           <!-- cards -->
           <section
-            class="w-full md:w-4/12 shadow-xl rounded-lg p-5 my-3 md:my-10 flex flex-col gap-3"
+            class="w-full md:w-4/12 shadow-xl dark:shadow-md dark:shadow-slate-800 rounded-lg p-5 my-3 md:my-10 flex flex-col gap-3"
           >
             <img class="w-10" src="./dist/images/icon.png" alt="card icon" />
-            <h1 class="font-medium text-lg">UX / UI Design</h1>
-            <p class="text-gray-400">
+            <h1 class="font-medium text-lg dark:text-white">UX / UI Design</h1>
+            <p class="text-gray-400 dark:text-gray-300">
               I specialize in creating interactive websites for individuals and
               small businesses
             </p>
@@ -168,11 +177,11 @@
             >
           </section>
           <section
-            class="w-full md:w-4/12 shadow-xl rounded-lg p-5 my-3 md:my-10 flex flex-col gap-3"
+            class="w-full md:w-4/12 shadow-xl dark:shadow-md dark:shadow-slate-800 rounded-lg p-5 my-3 md:my-10 flex flex-col gap-3"
           >
             <img class="w-10" src="./dist/images/icon.png" alt="card icon" />
-            <h1 class="font-medium text-lg">UX / UI Design</h1>
-            <p class="text-gray-400">
+            <h1 class="font-medium text-lg dark:text-white">UX / UI Design</h1>
+            <p class="text-gray-400 dark:text-gray-300">
               I specialize in creating interactive websites for individuals and
               small businesses
             </p>
@@ -181,11 +190,11 @@
             >
           </section>
           <section
-            class="w-full md:w-4/12 shadow-xl rounded-lg p-5 my-3 md:my-10 flex flex-col gap-3"
+            class="w-full md:w-4/12 shadow-xl dark:shadow-md dark:shadow-slate-800 rounded-lg p-5 my-3 md:my-10 flex flex-col gap-3"
           >
             <img class="w-10" src="./dist/images/icon.png" alt="card icon" />
-            <h1 class="font-medium text-lg">UX / UI Design</h1>
-            <p class="text-gray-400">
+            <h1 class="font-medium text-lg dark:text-white">UX / UI Design</h1>
+            <p class="text-gray-400 dark:text-gray-300">
               I specialize in creating interactive websites for individuals and
               small businesses
             </p>
@@ -194,11 +203,11 @@
             >
           </section>
           <section
-            class="w-full md:w-4/12 shadow-xl rounded-lg p-5 my-3 md:my-10 flex flex-col gap-3"
+            class="w-full md:w-4/12 shadow-xl dark:shadow-md dark:shadow-slate-800 rounded-lg p-5 my-3 md:my-10 flex flex-col gap-3"
           >
             <img class="w-10" src="./dist/images/icon.png" alt="card icon" />
-            <h1 class="font-medium text-lg">UX / UI Design</h1>
-            <p class="text-gray-400">
+            <h1 class="font-medium text-lg dark:text-white">UX / UI Design</h1>
+            <p class="text-gray-400 dark:text-gray-300">
               I specialize in creating interactive websites for individuals and
               small businesses
             </p>
@@ -207,11 +216,11 @@
             >
           </section>
           <section
-            class="w-full md:w-4/12 shadow-xl rounded-lg p-5 my-3 md:my-10 flex flex-col gap-3"
+            class="w-full md:w-4/12 shadow-xl dark:shadow-md dark:shadow-slate-800 rounded-lg p-5 my-3 md:my-10 flex flex-col gap-3"
           >
             <img class="w-10" src="./dist/images/icon.png" alt="card icon" />
-            <h1 class="font-medium text-lg">UX / UI Design</h1>
-            <p class="text-gray-400">
+            <h1 class="font-medium text-lg dark:text-white">UX / UI Design</h1>
+            <p class="text-gray-400 dark:text-gray-300">
               I specialize in creating interactive websites for individuals and
               small businesses
             </p>
@@ -220,11 +229,11 @@
             >
           </section>
           <section
-            class="w-full md:w-4/12 shadow-xl rounded-lg p-5 my-3 md:my-10 flex flex-col gap-3"
+            class="w-full md:w-4/12 shadow-xl dark:shadow-md dark:shadow-slate-800 rounded-lg p-5 my-3 md:my-10 flex flex-col gap-3"
           >
             <img class="w-10" src="./dist/images/icon.png" alt="card icon" />
-            <h1 class="font-medium text-lg">UX / UI Design</h1>
-            <p class="text-gray-400">
+            <h1 class="font-medium text-lg dark:text-white">UX / UI Design</h1>
+            <p class="text-gray-400 dark:text-gray-300">
               I specialize in creating interactive websites for individuals and
               small businesses
             </p>
@@ -239,13 +248,13 @@
     </section>
 
     <!-- portfolio -->
-    <section id="works">
-      <section class="container mx-auto mt-5">
+    <section id="works" class="dark:bg-slate-900">
+      <section class="container mx-auto pt-5">
         <!-- top -->
         <section class="flex flex-col gap-3 items-center">
           <h1 class="text-indigo-600 font-bold uppercase">Portfolio</h1>
-          <h1 class="text-3xl">Works & Projects</h1>
-          <p class="text-center w-1/2 text-gray-400">
+          <h1 class="text-3xl dark:text-white">Works & Projects</h1>
+          <p class="text-center w-1/2 text-gray-400 dark:text-gray-300">
             I help designers, small agencies and businesses bring their ideas to
             life. Powered by figma, VS code and coffee, I can turn your
             requirements into a well designed website.
@@ -298,7 +307,7 @@
     </section>
 
     <!-- contact -->
-    <div id="contact" class="dark:bg-slate-900 mt-5">
+    <div id="contact" class="dark:bg-slate-900 pt-5">
       <div class="container mx-auto">
         <!-- top -->
         <div class="flex flex-col gap-3 items-center">
@@ -344,9 +353,10 @@
           <img class="w-8" src="./dist/images/logo.png" alt="" />
           <span class="text-2xl font-bold text-white">Portwind.</span>
         </div>
-        <span class="hidden md:block font-medium text-white"
-          >© 2022 Portwind. Design with ♥️ by Fridah.</span
-        >
+        <span
+          id="footer_date"
+          class="hidden md:block font-medium text-white"
+        ></span>
         <div class="flex gap-2">
           <img
             class="w-4 cursor-pointer"
